--- a/data/settings.json
+++ b/data/settings.json
@@ -1,1 +1,1 @@
-{"token":"","client":"","tag":"!","case":"true","separator":"\\s+","ownerId":""}
+{"token":"NTQ1NjQ0Mzc5OTUyNjQ0MTE3.D30log.XR6LCoBB5N6izHLfxmgE_avu5EA","client":"545644379952644117","tag":"!","case":"true","separator":"\\s+","ownerId":"296655881079226369"}
