--- a/data/settings.json
+++ b/data/settings.json
@@ -1,1 +1,1 @@
-{"token":"","client":"","tag":"!","case":"true","separator":"\\s+","ownerId":""}
+{"token":"","client":"","tag":"!","case":"true","separator":"\\s+","ownerId":"296655881079226369"}
